// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyItem Format Address should match the property line3 missing 1`] = `
<div
  className="container propertyItem"
>
  <div
    className="panel"
  >
    <div
      className="row headings"
    >
      <div
        className="col-xs-3"
      >
        Owner
      </div>
      <div
        className="col-xs-5"
      >
        Address
      </div>
      <div
        className="col-xs-3"
      >
        Income Generated
      </div>
    </div>
    <div
      className="row details"
    >
      <div
        className="owner col-xs-3"
      >
        Elaine
      </div>
      <div
        className="address col-xs-5"
      >
        <div>
          4, 332b
        </div>
        <div>
          Goswell Road
        </div>
        <div>
          London, U.K.
        </div>
        <div>
          EC1V 7LQ
        </div>
      </div>
      <div
        className="income col-xs-4"
      >
        £
        1, 200
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItem Format Address should match the property missing line2 1`] = `
<div
  className="container propertyItem"
>
  <div
    className="panel"
  >
    <div
      className="row headings"
    >
      <div
        className="col-xs-3"
      >
        Owner
      </div>
      <div
        className="col-xs-5"
      >
        Address
      </div>
      <div
        className="col-xs-3"
      >
        Income Generated
      </div>
    </div>
    <div
      className="row details"
    >
      <div
        className="owner col-xs-3"
      >
        Carlos
      </div>
      <div
        className="address col-xs-5"
      >
        <div>
          Flat 5
        </div>
        <div>
          7 Westbourne Terrace
        </div>
        <div>
          London, U.K.
        </div>
        <div>
          W2 3UL
        </div>
      </div>
      <div
        className="income col-xs-4"
      >
        £
        2, 000.34
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItem Format Address should match the property with all lines 1`] = `
<div
  className="container propertyItem"
>
  <div
    className="panel"
  >
    <div
      className="row headings"
    >
      <div
        className="col-xs-3"
      >
        Owner
      </div>
      <div
        className="col-xs-5"
      >
        Address
      </div>
      <div
        className="col-xs-3"
      >
        Income Generated
      </div>
    </div>
    <div
      className="row details"
    >
      <div
        className="owner col-xs-3"
      >
        Ankur
      </div>
      <div
        className="address col-xs-5"
      >
        <div>
          4, Tower Mansions
        </div>
        <div>
          Off Station road
        </div>
        <div>
          86-87 Grange Road
        </div>
        <div>
          London, U.K.
        </div>
        <div>
          SE1 3BW
        </div>
      </div>
      <div
        className="income col-xs-4"
      >
        £
        1, 000
      </div>
    </div>
  </div>
</div>
`;
